sources/css/core/base.css
body {
  font-size: 14px;
}

.module-hero {
  @media(--small-viewport) {
    height: auto !important;
    margin-top: 50px;
    padding: 17% 0;
  }
}

.font-alt {
  text-transform: none;
}

.module-subtitle {
  font-size: 18px;
}

.hs-title-size {
  &-1 {
    font-size: 20px;

    @media(--small-viewport) {
      font-size: 16px;
    }
  }
  &-3 {
    margin-bottom: 10px !important;
    font-size: 60px;
    line-height: 1.3;
    font-weight: bold;

    @media(--small-viewport) {
      font-size: 40px;
    }
  }
}

.filter>li a {
  font-size: 15px;
}

.work-item {
  margin-top: -1px;

  .work-image:after {
    content: none;
  }
}

